<resources>
    <string name="app_name">SangkApp_EX</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="patreon_message">Support me at Patreon</string>
    <string name="gpu_acceleration">GPU Acceleration</string>
    <string name="camera">Camera</string>
    <string name="captured_photo">Captured</string>
    <string name="recipey">Recipe</string>
    <string name="menu_profile">Profile</string>
    <string name="logs">Logs</string>

    <string name="food_image_description">Food Image</string>
    <string name="select_meal_hint">Select Meal</string>
    <string name="nutrition_facts">Nutrition Facts</string>
    <string name="calories">Calories</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="fibers">Fibers</string>
    <string name="sugars">Sugars</string>
    <string name="proteins">Proteins</string>
    <string name="fats">Fats</string>
    <string name="saturated_fats">Saturated fatty acids</string>
    <string name="monounsaturated_fats">Monounsaturated fatty acids</string>
    <string name="cholesterol">Cholesterol</string>
    <string name="sodium">Sodium</string>
    <string name="calcium">Calcium</string>
    <string name="iron">Iron</string>
    <string name="vitamin_a">Vitamin A - Beta-K</string>
    <string name="vitamin_a_retinol">Vitamin A - Retinol</string>
    <string name="vitamin_b1">Vitamin B1 - Thiamin</string>
    <string name="vitamin_b2">Vitamin B2 - Riboflavin</string>
    <string name="vitamin_b3">Vitamin B3 - Niacin</string>
    <string name="vitamin_c">Vitamin C - Ascorbic acid</string>
    <string name="detected_volume">Detected Volume:</string>
    <string name="maximum_meal_portion">Maximum meal portion:</string>
    <string name="recommendation">Recommendation:</string>
</resources>